# PtRegressionJERC

./: .gitignore  .sites_map.json  README.md  cartesian_config.py  custom_functions.py  cuts.py  exec.py  jme_config.py  pocket-coffea-environment.yml  pyproject.toml  requirements.txt  variables_def.py  workflow.py
datasets/: QCD.json  QCD_redirector.json  datasets_definitions.json
mc_truth_ptreg_jerc/: README.md  args_exec.py  cartesian_config.py  custom_functions.py  cuts.py  exec.py  jer_mc_config.py  jer_variables_def.py  jme_config.py  variables_def.py  workflow.py
met_ptreg_performance/: MET_studies_config.py  MET_studies_config_calibrator.py  README.md  custom_cuts.py  custom_object_preselections.py  helpers.py  plot_MET.py  plot_config.py  plot_year_comparison.py  workflow.py  workflow_dummy.py
params/: Summer20UL16APV_V1_MC_L2Relative_AK4PFPNet.txt  Summer20UL16APV_V1_MC_L2Relative_AK4PFPNetPlusNeutrino.txt  Summer20UL16APV_V1_MC_L2Relative_AK4PFUparT.txt  Summer20UL16APV_V1_MC_L2Relative_AK4PFUparTPlusNeutrino.txt  Summer20UL16_V1_MC_L2Relative_AK4PFPNet.txt  Summer20UL16_V1_MC_L2Relative_AK4PFPNetPlusNeutrino.txt  Summer20UL16_V1_MC_L2Relative_AK4PFUparT.txt  Summer20UL16_V1_MC_L2Relative_AK4PFUparTPlusNeutrino.txt  Summer20UL17_V1_MC_L2Relative_AK4PFPNet.txt  Summer20UL17_V1_MC_L2Relative_AK4PFPNetPlusNeutrino.txt  Summer20UL17_V1_MC_L2Relative_AK4PFUparT.txt  Summer20UL17_V1_MC_L2Relative_AK4PFUparTPlusNeutrino.txt  Summer20UL18_V1_MC_L2Relative_AK4PFPNet.txt  Summer20UL18_V1_MC_L2Relative_AK4PFPNetPlusNeutrino.txt  Summer20UL18_V1_MC_L2Relative_AK4PFUparT.txt  Summer20UL18_V1_MC_L2Relative_AK4PFUparTPlusNeutrino.txt  Summer22EERun3_V3_MC_L2Relative_AK4PFPNet.txt  binning.py  (+26 more)
(+32 files in other folders)
