[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pt_regression_jerc"
description = "Library of configurations for PocketCoffea framework to compute JERC for pT regression"
authors = [
    {name = "Matteo Malucchi", email = "matteo.malucchi@cern.ch"}]
license = {text = "BSD-3-Clause"}
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed"]
dynamic = ["version", "dependencies"]
requires-python = ">=3.7"

[tool.setuptools.dynamic]
#version = {attr = "configs.__meta__.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["mc_truth_ptreg_jerc", "met_ptreg_performance"]
exclude = ["tests/*", "output/*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pocket_coffea = ["configs/*.txt",
              "configs/*.yaml",
              "configs/*.json",
              "configs/*.txt.gz"]

[project.scripts]
